[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
regex = "1.7.0"
openssl = { version = "0.10", features = ["vendored"] }
cached = "0.42.0"
